--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tv_random_questions">Случайные вопросы</string>
     <string name="tv_guess_member">Угадай по фото</string>
     <string name="image_for_question_description">Image for question</string>
+    <string name="tv_text_questions">Текстовые вопросы</string>
 </resources>
