--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">Only BTS Funs</string>
+    <string name="brand_image_content_description">Brand image</string>
     <string name="tv_choose_category">Выберите категорию</string>
     <string name="tv_random_questions">Случайные вопросы</string>
-    <string name="tv_guess_member">Угадай по фото</string>
-    <string name="image_for_question_description">Image for question</string>
     <string name="tv_text_questions">Текстовые вопросы</string>
+    <string name="tv_guess_member">Угадай по фото</string>
+
+    <string name="image_for_question_description">Image for question</string>
+
     <string name="your_result">Ваш результат</string>
-    <string name="best_result">Лучший результат</string>
+    <string name="text_for_bad_result">Мы в тебя верим!</string>
+    <string name="text_for_good_result">Отлично получается!</string>
+    <string name="text_for_best_result">Наши поздравления!</string>
     <string name="to_categories_text">К выбору категории</string>
+    <string name="result_image_content_description">Result Image</string>
 </resources>
