ViewModels now use Coroutines, add load screens and animations in layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="brand_image_content_description">Brand image</string>
     <string name="image_for_question_description">Image for question</string>
     <string name="result_image_content_description">Result Image</string>
+    <string name="tv_loading_quiz_text">Подготавливаем для вас самые сложные вопросы</string>
+    <string name="tv_loading_result_text">Подсчитываем ваши баллы</string>
 
 </resources>
