Minor dimensional changes, name changes and user timeouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="image_questions">Угадай по фото</string>
     <string name="button_text_results">Результаты</string>
 
-    <string name="tv_loading_quiz_text">Подготавливаем для вас самые интересные вопросы</string>
-    <string name="tv_loading_result_text">Подсчитываем ваши баллы</string>
+    <string name="tv_loading_quiz_text">Подготавливаем самые интересные вопросы</string>
+    <string name="tv_loading_result_text">Подсчитываем баллы</string>
 
     <string name="tv_text_your_result">Ваш результат</string>
     <string name="tv_text_best_result">Лучший результат</string>
