--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Only BTS Funs</string>
 
     <string name="start_quiz">Начать тест</string>
-    <string name="settings">Настройки</string>
+    <string name="settings">Сложность вопросов</string>
     <string name="difficulty">Сложность вопросов</string>
     <string name="button_text_results">Результаты</string>
 
