Funs changed to Fans

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Only BTS Funs</string>
+    <string name="app_name">Only BTS Fans</string>
 
     <string name="start_quiz">Начать тест</string>
     <string name="settings">Сложность вопросов</string>
