--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,10 +22,10 @@
     <string name="image_questions">Угадай по фото</string>
     <string name="audio_questions">Угадай песню</string>
 
-    <string name="difficulty_warning">Необходимо переключить сложность на Случайную или Повышенную</string>
+    <string name="difficulty_warning">Необходимо переключить сложность на \"Случайную\" или \"Повышенную\"</string>
 
     <string name="tv_loading_quiz_text">Подготавливаем самые интересные вопросы</string>
-    <string name="tv_loading_quiz_internet_hint_text">Подготавливаем самые интересные вопросы.\nПроверьте подключение к интернету</string>
+
     <string name="tv_out_of_questions_hint_text">Похоже, что вы ответили на все вопросы в данной категории!\nВы можете выключить опцию \"Без повторения\" и вернуться снова :)</string>
 
     <string name="tv_points_label">За вопрос: %1$d</string>
@@ -40,10 +40,10 @@
     <string name="text_for_good_result">Отлично получается!</string>
     <string name="text_for_best_result">Новый рекорд!</string>
     <string name="to_categories_text">К выбору категории</string>
+    <string name="go_to_menu">В меню</string>
 
     <string name="brand_image_content_description">Brand image</string>
     <string name="image_for_question_description">Image for question</string>
     <string name="result_image_content_description">Result Image</string>
     <string name="audio_question_content_description">Audio question icon</string>
-    <string name="go_to_menu">В меню</string>
 </resources>
