--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,83 +1,89 @@
 <resources>
     <string name="app_name">Only BTS Fans</string>
 
-    <string name="start_quiz">Начать тест</string>
-    <string name="settings">Настройки</string>
-    <string name="button_text_results">Результаты</string>
+    <string name="start_quiz">Start quiz</string>
+    <string name="settings">Settings</string>
+    <string name="button_text_results">Results</string>
 
-    <string name="difficulty">Сложность вопросов</string>
-    <string name="random_difficulty">Случайная</string>
-    <string name="usual_difficulty">Обычная</string>
-    <string name="difficult_difficulty">Повышенная</string>
-    <string name="set_difficulty">Сложность установлена</string>
-    <string name="no_questions_repetition">Без повторения</string>
-    <string name="set_no_questions_repetition">Опция \"Без повторения вопросов\" включена</string>
-    <string name="unset_no_questions_repetition">Опция \"Без повторения вопросов\" выключена</string>
-    <string name="reset_passed_question">Сбросить пройденные вопросы?</string>
+    <string name="difficulty">Difficulty of questions</string>
+    <string name="random_difficulty">Random</string>
+    <string name="usual_difficulty">Usual</string>
+    <string name="difficult_difficulty">Difficult</string>
+    <string name="set_difficulty">The difficulty is set</string>
+    <string name="no_questions_repetition">Without repeating</string>
+    <string name="set_no_questions_repetition">The \"No repeat questions\" option is enabled</string>
+    <string name="unset_no_questions_repetition">The \"No repeat questions\" option is disabled</string>
+    <string name="reset_passed_question">Reset passed questions?</string>
+    <string name="creators_and_licenses">Creators and Licenses</string>
 
-    <string name="confirmation">Подтверждение</string>
-    <string name="close_dialog_content_description">Закрытие диалога</string>
-    <string name="reset_confirmation_question">Вы действительно хотите сбросить пройденные вопросы?</string>
-    <string name="confirm">Подтвердить</string>
-    <string name="reset_n_passed_question">Сброшено пройденных вопросов: %1$d</string>
+    <string name="creators">Creators</string>
+    <string name="creators_content_description" translatable="false">JustCircle Prod.</string>
+    <string name="licenses">Licences</string>
+    <string name="go_to_settings">Settings</string>
 
-    <string name="tv_choose_category">Выберите категорию</string>
-    <string name="random_questions">Случайные вопросы</string>
-    <string name="text_questions">Текстовые вопросы</string>
-    <string name="video_questions">Угадай клип</string>
-    <string name="image_questions">Угадай по фото</string>
-    <string name="audio_questions">Угадай песню</string>
+    <string name="confirmation">Confirmation</string>
+    <string name="close_dialog_content_description">Closing the dialog</string>
+    <string name="reset_confirmation_question">Do you really want to reset the passed questions?</string>
+    <string name="confirm">Confirm</string>
+    <string name="reset_n_passed_question">Passed questions have been reset: %1$d</string>
 
-    <string name="difficulty_warning">Необходимо переключить сложность на \"Случайную\" или \"Повышенную\"</string>
+    <string name="tv_choose_category">Select a category</string>
+    <string name="random_questions">Random questions</string>
+    <string name="text_questions">Text questions</string>
+    <string name="video_questions">Guess clip</string>
+    <string name="image_questions">Guess by photo</string>
+    <string name="audio_questions">Guess song</string>
 
-    <string name="tv_loading_quiz_text">Подготавливаем самые интересные вопросы</string>
+    <string name="difficulty_warning">It is necessary to switch the difficulty to \"Random\" or \"Difficult\"</string>
 
-    <string name="tv_out_of_questions_hint_text">Похоже, что вы ответили на все вопросы в данной категории!\nВы можете выключить опцию \"Без повторения\" или сбросить пройденные вопросы и вернуться снова :)</string>
+    <string name="tv_loading_quiz_text">We prepare the most interesting questions</string>
 
-    <string name="tv_points_label">За вопрос: %1$d</string>
-    <string name="tv_score_label">Всего очков: %1$d</string>
+    <string name="tv_out_of_questions_hint_text">It looks like you have answered all the questions in this category!\You can turn off the \"No repeat\" option or reset the passed questions and come back again :)</string>
 
-    <string name="tv_loading_result_text">Подсчитываем баллы</string>
+    <string name="tv_points_label">For this question: %1$d</string>
+    <string name="tv_score_label">Total points: %1$d</string>
 
-    <string name="tv_text_your_result">Ваш результат</string>
-    <string name="tv_text_best_result">Лучший результат</string>
+    <string name="tv_loading_result_text">Counting the points</string>
+
+    <string name="tv_text_your_result">Current score</string>
+    <string name="tv_text_best_result">Best score</string>
 
     <string-array name="texts_for_bad_result">
-        <item>Мы в тебя верим!</item>
-        <item>Ты сможешь!</item>
-        <item>Верь в себя!</item>
-        <item>В следующий раз получится!</item>
-        <item>Не сдавайся!</item>
+        <item>We believe in you!</item>
+        <item>You can do it!</item>
+        <item>Believe in yourself!</item>
+        <item>Next time it will work!</item>
+        <item>Don\'t give up!</item>
     </string-array>
 
     <string-array name="texts_for_good_result">
-        <item>Отлично получается!</item>
-        <item>Ты молодец!</item>
-        <item>Ещё немного!</item>
-        <item>Почти рекорд!</item>
-        <item>Не сдавайся!</item>
+        <item>It\'s working out great!</item>
+        <item>Good job!</item>
+        <item>A little more!</item>
+        <item>Almost a record!</item>
+        <item>Don\'t give up!</item>
     </string-array>
 
     <string-array name="texts_for_best_result">
-        <item>Новый рекорд!</item>
-        <item>Ура!</item>
-        <item>Поздравляем!</item>
-        <item>Ты молодец!</item>
-        <item>Мы не сомневались!</item>
+        <item>A new record!</item>
+        <item>Hurray!</item>
+        <item>Congratulations!</item>
+        <item>Good job!</item>
+        <item>We had no doubt!</item>
     </string-array>
 
-    <string name="share_result">Поделиться результатом</string>
-    <string name="for_sharing_result">Смотри! Мой результат в категории \"%1$s\" равен %2$d. Сможешь набрать больше?</string>
+    <string name="share_result">Share the result</string>
+    <string name="for_sharing_result">Look! My result in the category \"%1$s\" is %2$d. Can you score more?</string>
     <string name="play_store_link">https://play.google.com/store/apps/details?id=ru.justcircleprod.onlybtsfuns</string>
 
-    <string name="to_categories_text">К выбору категории</string>
-    <string name="sharing_result_not_available">На данный момент функция недоступна</string>
+    <string name="to_categories_text">Go to the category selection</string>
+    <string name="sharing_result_not_available">The function is currently unavailable</string>
 
-    <string name="go_to_menu">В меню</string>
+    <string name="go_to_menu">Menu</string>
 
-    <string name="brand_image_content_description">Изображение бренда</string>
-    <string name="image_for_question_description">Изображение для вопроса</string>
-    <string name="video_for_question_description">Видео для вопроса</string>
-    <string name="audio_question_content_description">Иконка аудио изображения</string>
-    <string name="result_image_content_description">Изображение для результата</string>
+    <string name="brand_image_content_description">Brand Image</string>
+    <string name="image_for_question_description">Image for the question</string>
+    <string name="video_for_question_description">Video for the question</string>
+    <string name="audio_question_content_description">Audio Question icon</string>
+    <string name="result_image_content_description">Image for the result</string>
 </resources>
