--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,16 +10,15 @@
     <string name="usual_difficulty">Usual</string>
     <string name="difficult_difficulty">Difficult</string>
     <string name="set_difficulty">The difficulty is set</string>
-    <string name="no_questions_repetition">Without repeating</string>
-    <string name="set_no_questions_repetition">The \"No repeat questions\" option is enabled</string>
-    <string name="unset_no_questions_repetition">The \"No repeat questions\" option is disabled</string>
+    <string name="no_questions_repetition">No questions repetition</string>
+    <string name="set_no_questions_repetition">The \"No questions repetition\" option is enabled</string>
+    <string name="unset_no_questions_repetition">The \"No questions repetition\" option is disabled</string>
     <string name="reset_passed_question">Reset passed questions?</string>
     <string name="developers_and_licenses">Developers and Licenses</string>
 
-    <string name="creators">Creators</string>
+    <string name="developers">Developers</string>
     <string name="creators_content_description" translatable="false">JustCircle Prod.</string>
     <string name="licenses">Licences</string>
-    <string name="go_to_settings">Settings</string>
 
     <string name="confirmation">Confirmation</string>
     <string name="close_dialog_content_description">Closing the dialog</string>
@@ -36,14 +35,14 @@
 
     <string name="difficulty_warning">It is necessary to switch the difficulty to \"Random\" or \"Difficult\"</string>
 
-    <string name="tv_loading_quiz_text">We prepare the most interesting questions</string>
+    <string name="tv_loading_quiz_text">Preparing the most interesting questions</string>
 
     <string name="tv_out_of_questions_hint_text">It looks like you have answered all the questions in this category!\You can turn off the \"No repeat\" option or reset the passed questions and come back again :)</string>
 
     <string name="tv_points_label">Points: %1$d</string>
     <string name="tv_score_label">Total points: %1$d</string>
 
-    <string name="tv_loading_result_text">Counting the points</string>
+    <string name="tv_loading_result_text">Counting points</string>
 
     <string name="tv_text_your_result">Current score</string>
     <string name="tv_text_best_result">Best score</string>
@@ -72,14 +71,16 @@
         <item>We had no doubt!</item>
     </string-array>
 
-    <string name="share_result">Share the result</string>
+    <string name="share_result">Share result</string>
     <string name="for_sharing_result">Look! My result in the category \"%1$s\" is %2$d. Can you score more?</string>
-    <string name="play_store_link">https://play.google.com/store/apps/details?id=ru.justcircleprod.onlybtsfuns</string>
-
-    <string name="to_categories_text">Go to the category selection</string>
+    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.justcircleprod.beautifulkpopquizzes</string>
     <string name="sharing_result_not_available">The function is currently unavailable</string>
 
-    <string name="go_to_menu">Menu</string>
+    <string name="repeat_quiz">Repeat quiz</string>
+
+    <string name="to_categories_text">Go to categories</string>
+
+    <string name="back">Back</string>
 
     <string name="brand_image_content_description">Brand Image</string>
     <string name="image_for_question_description">Image for the question</string>
